Fix ambiente subtítulo bug overflow

--- a/app/home/static/scss/causa.scss
+++ b/app/home/static/scss/causa.scss
@@ -80,7 +80,10 @@ body {overflow-x: hidden;}
     }
     h1 {
       font-size: 3.5rem;
+
       padding: 6rem 0 3rem 0;
+      /*ambiente tiene un subtítulo largísimo*/
+      .causa-ambiente &{ padding: 3rem 0 3rem 0; }
       @media (min-width: $width-medium) {
         padding: 4rem 0 3rem 0;
       }
